--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <span><a href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a> · <a href="#">CV</a></span>
       </p>
     </div>
-    <img class="photo" src="assets/torehof.jpg" alt="Portrait of Tore Hofstad">
+    <img class="photo" src="torehof.jpg" alt="Portrait of Tore Hofstad">
   </section>
 
   <div class="rule"></div>
