--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
       <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a> · <a style="color:white;" href="#">CV</a></p>
     </div>
-    <img class="photo" src="torehof.jpg" alt="Portrait of Tore Hofstad">
+    <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
   </header>
 
   <main>
