--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     height: 150px;
     border-radius: 50%;
     object-fit: cover;
+    object-position: top;
     border: 3px solid white;
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   }
@@ -103,8 +104,11 @@
   <header>
     <div>
       <h1>Tore Hofstad</h1>
-      <p>Guest researcher, Centre for Medical Ethics (CME)</p>
-      <p>Institute of Health and Society (HELSAM), University of Oslo</p>
+      <p>
+  Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>
+</p>
+<p>Guest researcher, Centre for Medical Ethics (CME)</p>
+<p>Institute of Health and Society (HELSAM), University of Oslo</p>
       <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
       <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a> · <a style="color:white;" href="#">CV</a></p>
     </div>
