--- a/index.html
+++ b/index.html
@@ -115,13 +115,18 @@
     <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
   </header>
 
-  <main>
-    <section class="card">
-      <h2>Research interests</h2>
-      <p>Coercion in mental health care</p>
-      <p>Geographical variation in health services</p>
-      <p>Statistical methods for causal inference</p>
-    </section>
+<main>
+  <section class="card">
+    <h2>Research interests</h2>
+    <ul>
+      <li>Coercion in mental health care</li>
+      <li>Geographical variation in health services</li>
+      <li>Statistical methods for causal inference</li>
+      <li>Handling of registry data and data visualisation in R</li>
+      <li>Qualitative Comparative Analysis (QCA)</li>
+      <li>Neurodevelopmental disorders</li>
+    </ul>
+  </section>
 
     <section class="card">
       <h2>Selected links</h2>
