--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <p>Guest researcher, Centre for Medical Ethics (CME)</p>
 <p>Institute of Health and Society (HELSAM), University of Oslo</p>
       <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
-      <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a> · <a style="color:white;" href="#">CV</a></p>
+      <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
     </div>
     <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
   </header>
