--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
     </section>
   </main>
 
+<section class="card" style="border-left: 6px solid #b45309;">
+  <h2>Other interests</h2>
+  <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our music is available on <a href="https://open.spotify.com/artist/0JE40X5MtJJGjScrzAqc8n?si=6XH3mfWvRcmR1vaM0RpUGw" target="_blank">Spotify</a>.</p>
+</section>
+  
   <footer>
     © <span id="year"></span> Tore Hofstad
   </footer>
