--- a/index.html
+++ b/index.html
@@ -13,22 +13,18 @@
     --card: #ffffff;
     --shadow: rgba(0, 0, 0, 0.06);
   }
-  @media (prefers-color-scheme: dark) {
-    :root {
-      --accent: #5eead4;
-      --bg1: #0b0f14;
-      --bg2: #0f1620;
-      --text: #e5e7eb;
-      --card: #1f2937;
-      --shadow: rgba(0,0,0,0.4);
-    }
-  }
   body {
-    margin:0;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--text);
-    background: linear-gradient(180deg, var(--bg1), var(--bg2));
+  background: linear-gradient(180deg, #f8fafc, #ecfdf5); /* light gradient top→bottom */
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+  color: #0f172a;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: linear-gradient(180deg, #0b0f14, #0f1620); /* darker gradient for dark mode */
+    color: #e5e7eb;
   }
+}
   header {
     display: flex;
     flex-wrap: wrap;
