--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
       <p>
   Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>
 </p>
-<p>Guest researcher, Centre for Medical Ethics (CME)</p>
-<p>Institute of Health and Society (HELSAM), University of Oslo</p>
+<p>Guest researcher, Centre for Medical Ethics, Institute of Health and Society, University of Oslo</p>
       <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
       <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
     </div>
