--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
     --shadow: rgba(0, 0, 0, 0.06);
   }
   body {
-  background: linear-gradient(180deg, #f8fafc, #ecfdf5); /* light gradient top→bottom */
+  margin: 0;
+  background: linear-gradient(180deg, #f8fafc, #ecfdf5);
   font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
   color: #0f172a;
+  line-height: 1.6;
 }
 
 @media (prefers-color-scheme: dark) {
   body {
-    background: linear-gradient(180deg, #0b0f14, #0f1620); /* darker gradient for dark mode */
+    background: linear-gradient(180deg, #0b0f14, #0f1620);
     color: #e5e7eb;
   }
 }
+
   header {
     display: flex;
     flex-wrap: wrap;
