--- a/index.html
+++ b/index.html
@@ -15,25 +15,14 @@
   }
 body {
   margin: 0;
-  background: linear-gradient(180deg, #f8fafc, #ecfdf5);
+  background: linear-gradient(180deg, #f8fafc, #d1fae5); /* more visible light-green fade */
   font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
   color: #1e293b; /* Dark slate for good contrast */
   line-height: 1.6;
 }
 
 h1, h2, h3 {
-  color: #0f172a; /* Nearly black for headers */
-}
-
-@media (prefers-color-scheme: dark) {
-  body {
-    background: linear-gradient(180deg, #0b0f14, #0f1620);
-    color: #e5e7eb; /* light grey for text in dark mode */
-  }
-
-  h1, h2, h3 {
-    color: #f1f5f9; /* brighter headers in dark mode */
-  }
+  color: #0f172a; /* Strong headers */
 }
 
   header {
