--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   :root {
     --accent: #0f766e;
     --bg1: #f8fafc;
-    --bg2: #ecfdf5;
+    --bg2: #d1fae5;
     --text: #0f172a;
-    --card: #ffffff;
     --shadow: rgba(0, 0, 0, 0.06);
   }
-body {
-  margin: 0;
-  background: linear-gradient(180deg, #f8fafc, #d1fae5); /* more visible light-green fade */
-  font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-  color: #1e293b; /* Dark slate for good contrast */
-  line-height: 1.6;
-}
 
-h1, h2, h3 {
-  color: #0f172a; /* Strong headers */
-}
+  body {
+    margin: 0;
+    background: linear-gradient(180deg, var(--bg1), var(--bg2));
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+    color: #1e293b;
+    line-height: 1.6;
+  }
+
+  h1, h2, h3 {
+    color: var(--text);
+  }
 
   header {
     display: flex;
@@ -34,14 +34,18 @@ h1, h2, h3 {
     background: var(--accent);
     color: white;
   }
+
   header h1 {
     font-family: 'Merriweather', serif;
     font-size: 2rem;
     margin: 0;
+    color: white; /* ensure it's readable on the green background */
   }
+
   header p {
     margin: .3rem 0;
   }
+
   .photo {
     width: 150px;
     height: 150px;
@@ -51,14 +55,17 @@ h1, h2, h3 {
     border: 3px solid white;
     box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   }
+
   main {
     max-width: 960px;
     margin: 2rem auto;
     padding: 0 1rem;
   }
+
   section {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem; /* more breathing room */
   }
+
   h2 {
     font-family: 'Merriweather', serif;
     font-size: 1.4rem;
@@ -66,28 +73,40 @@ h1, h2, h3 {
     border-bottom: 2px solid var(--accent);
     padding-bottom: 0.3rem;
   }
+
   .card {
-    background: var(--card);
+    background: rgba(255, 255, 255, 0.92); /* semi-transparent to show gradient */
     border-radius: 12px;
     box-shadow: 0 2px 8px var(--shadow);
     padding: 1rem 1.25rem;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
   }
+
   .card:hover {
     transform: translateY(-2px);
     box-shadow: 0 4px 14px var(--shadow);
   }
+
+  @media (prefers-color-scheme: dark) {
+    .card {
+      background: rgba(31, 41, 55, 0.92);
+    }
+  }
+
   .pubs p {
     margin: 0.5rem 0;
     line-height: 1.5;
   }
+
   a {
     color: var(--accent);
     text-decoration: none;
   }
+
   a:hover {
     text-decoration: underline;
   }
+
   footer {
     text-align: center;
     font-size: 0.9rem;
@@ -101,27 +120,27 @@ h1, h2, h3 {
     <div>
       <h1>Tore Hofstad</h1>
       <p>
-  Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>
-</p>
-<p>Guest researcher, Centre for Medical Ethics, Institute of Health and Society, University of Oslo</p>
+        Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>
+      </p>
+      <p>Guest researcher, Centre for Medical Ethics, Institute of Health and Society, University of Oslo</p>
       <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
       <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
     </div>
     <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
   </header>
 
-<main>
-  <section class="card">
-    <h2>Research interests</h2>
-    <ul>
-      <li>Coercion in mental health care</li>
-      <li>Geographical variation in health services</li>
-      <li>Statistical methods for causal inference</li>
-      <li>Handling of registry data and data visualisation in R</li>
-      <li>Qualitative Comparative Analysis (QCA)</li>
-      <li>Neurodevelopmental disorders</li>
-    </ul>
-  </section>
+  <main>
+    <section class="card">
+      <h2>Research interests</h2>
+      <ul>
+        <li>Coercion in mental health care</li>
+        <li>Geographical variation in health services</li>
+        <li>Statistical methods for causal inference</li>
+        <li>Handling of registry data and data visualisation in R</li>
+        <li>Qualitative Comparative Analysis (QCA)</li>
+        <li>Neurodevelopmental disorders</li>
+      </ul>
+    </section>
 
     <section class="card">
       <h2>Selected links</h2>
@@ -133,21 +152,21 @@ h1, h2, h3 {
       <h2>Publications</h2>
       <p>Rugkåsa, J., Nyttingnes, O., Šaltytė Benth, J., Husum, T. L., Kjus, S. H. H., Wormdahl, I., ... &amp; Hatling, T. (2025). Can primary mental health services impact levels of involuntary admissions? A cluster-RCT of the ReCoN intervention. <i>Social Psychiatry and Psychiatric Epidemiology</i>, 1–11.</p>
       <p>Hofstad, T., Nyttingnes, O., Bjelland, I., &amp; Mykletun, A. (2025). Catchment area characteristics do not account for geographical variation in ADHD diagnoses. <i>European Child &amp; Adolescent Psychiatry</i>, 1–7.</p>
-      <p>Hofstad, T., Nyttingnes, O., Markussen, S., Johnsen, E., Killackey, E., McDaid, D., ... &amp; Mykletun, A. (2023). Long term outcomes and causal modelling of compulsory inpatient and outpatient mental health care using Norwegian registry data: Protocol for a controversies in psychiatry research project. <i>International Journal of Methods in Psychiatric Research</i>, e1980.</li>
-      <p>Nyttingnes, O., Benth, J. Š., Hofstad, T., &amp; Rugkåsa, J. (2023). The relationship between area levels of involuntary psychiatric care and patient outcomes: a longitudinal national register study from Norway. <i>BMC Psychiatry</i>, 23(1), 112.<p>
-      <p>Hofstad, T. (2022). Geographical variation in compulsory hospitalisation in Norway 2014–2018. PhD-avhandling.<p>
-      <p>Hofstad, T., Husum, T. L., Rugkåsa, J., &amp; Hofmann, B. M. (2022). Geographical variation in compulsory hospitalisation–ethical challenges. <i>BMC Health Services Research</i>, 22(1), 1–12.<p>
-      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O., Kjus, S.H.H., and Husum, T.L. (2021), Service Characteristics and Geographical Variation in Compulsory Hospitalisation: An Exploratory Random Effects Within–Between Analysis of Norwegian Municipalities, 2015–2018. <i>Frontiers in Psychiatry</i>. <a href="https://doi.org/10.3389/fpsyt.2021.737698">https://doi.org/10.3389/fpsyt.2021.737698</a><p>
-      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O. and Husum, T.L. (2021), Measuring the level of compulsory hospitalisation in mental health care: The performance of different measures across areas and over time. <i>International Journal of Methods in Psychiatric Research</i>. e1881. <a href="https://doi.org/10.1002/mpr.1881">https://doi.org/10.1002/mpr.1881</a><p>
-      <p>Hofstad, T., Hampton, J. A., &amp; Hofmann, B. (2020). What Makes Some Diseases More Typical than Others? A Survey on the Impact of Disease Characteristics and Professional Background on Disease Typicality. <i>INQUIRY: The Journal of Health Care Organization, Provision, and Financing</i>. <a href="https://doi.org/10.1177/0046958020972813">https://doi.org/10.1177/0046958020972813</a><p>
-      <p>Hofstad, Tore (2019). QCA &amp; the Robustness range of calibration thresholds: how sensitive are solution terms to changing calibrations? . <i>COMPASSS Working Paper Series</i> 2019-92.<p>
+      <p>Hofstad, T., Nyttingnes, O., Markussen, S., Johnsen, E., Killackey, E., McDaid, D., ... &amp; Mykletun, A. (2023). Long term outcomes and causal modelling of compulsory inpatient and outpatient mental health care using Norwegian registry data: Protocol for a controversies in psychiatry research project. <i>International Journal of Methods in Psychiatric Research</i>, e1980.</p>
+      <p>Nyttingnes, O., Benth, J. Š., Hofstad, T., &amp; Rugkåsa, J. (2023). The relationship between area levels of involuntary psychiatric care and patient outcomes: a longitudinal national register study from Norway. <i>BMC Psychiatry</i>, 23(1), 112.</p>
+      <p>Hofstad, T. (2022). Geographical variation in compulsory hospitalisation in Norway 2014–2018. PhD-avhandling.</p>
+      <p>Hofstad, T., Husum, T. L., Rugkåsa, J., &amp; Hofmann, B. M. (2022). Geographical variation in compulsory hospitalisation–ethical challenges. <i>BMC Health Services Research</i>, 22(1), 1–12.</p>
+      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O., Kjus, S.H.H., and Husum, T.L. (2021), Service Characteristics and Geographical Variation in Compulsory Hospitalisation: An Exploratory Random Effects Within–Between Analysis of Norwegian Municipalities, 2015–2018. <i>Frontiers in Psychiatry</i>. <a href="https://doi.org/10.3389/fpsyt.2021.737698">https://doi.org/10.3389/fpsyt.2021.737698</a></p>
+      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O. and Husum, T.L. (2021), Measuring the level of compulsory hospitalisation in mental health care: The performance of different measures across areas and over time. <i>International Journal of Methods in Psychiatric Research</i>. e1881. <a href="https://doi.org/10.1002/mpr.1881">https://doi.org/10.1002/mpr.1881</a></p>
+      <p>Hofstad, T., Hampton, J. A., &amp; Hofmann, B. (2020). What Makes Some Diseases More Typical than Others? A Survey on the Impact of Disease Characteristics and Professional Background on Disease Typicality. <i>INQUIRY</i>. <a href="https://doi.org/10.1177/0046958020972813">https://doi.org/10.1177/0046958020972813</a></p>
+      <p>Hofstad, Tore (2019). QCA &amp; the Robustness range of calibration thresholds: how sensitive are solution terms to changing calibrations? <i>COMPASSS Working Paper Series</i> 2019-92.</p>
+    </section>
+
+    <section class="card" style="border-left: 6px solid #b45309;">
+      <h2>Other interests</h2>
+      <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our music is available on <a href="https://open.spotify.com/artist/0JE40X5MtJJGjScrzAqc8n?si=6XH3mfWvRcmR1vaM0RpUGw" target="_blank">Spotify</a>.</p>
     </section>
   </main>
-
-<section class="card" style="border-left: 6px solid #b45309;">
-  <h2>Other interests</h2>
-  <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our music is available on <a href="https://open.spotify.com/artist/0JE40X5MtJJGjScrzAqc8n?si=6XH3mfWvRcmR1vaM0RpUGw" target="_blank">Spotify</a>.</p>
-</section>
   
   <footer>
     © <span id="year"></span> Tore Hofstad
