--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     color: var(--text);
   }
 
-  header {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem max(5vw, 1rem);
-    background: var(--accent);
-    color: white;
-  }
+ header {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem max(5vw, 1rem);
+  background: linear-gradient(135deg, #0f766e, #115e59); /* gradient green */
+  color: white;
+}
 
   header h1 {
     font-family: 'Merriweather', serif;
