--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@ header {
     margin: .3rem 0;
   }
 
+@keyframes headerGradient {
+  0% { background-position: 0% 50%; }
+  100% { background-position: 100% 50%; }
+}
+
+header {
+  animation: headerGradient 8s ease-in-out infinite alternate;
+}
+  
   .photo {
     width: 150px;
     height: 150px;
