--- a/index.html
+++ b/index.html
@@ -3,186 +3,33 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Tore Hofstad</title>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans&display=swap" rel="stylesheet">
-<style>
-  :root {
-    --accent: #0f766e;
-    --bg1: #f8fafc;
-    --bg2: #d1fae5;
-    --text: #0f172a;
-    --shadow: rgba(0, 0, 0, 0.06);
-  }
-
-  body {
-    margin: 0;
-    background: linear-gradient(180deg, var(--bg1), var(--bg2));
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    color: #1e293b;
-    line-height: 1.6;
-  }
-
-  h1, h2, h3 {
-    color: var(--text);
-  }
-
-header {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  padding: 2rem max(5vw, 1rem);
-  background: linear-gradient(135deg, #0f766e, #0a4f4b); /* richer two-tone green */
-  color: white;
-}
-
-  header h1 {
-    font-family: 'Merriweather', serif;
-    font-size: 2rem;
-    margin: 0;
-    color: white; /* ensure it's readable on the green background */
-  }
-
-  header p {
-    margin: .3rem 0;
-  }
-
-@keyframes headerGradient {
-  0% { background-position: 0% 50%; }
-  100% { background-position: 100% 50%; }
-}
-
-header {
-  animation: headerGradient 8s ease-in-out infinite alternate;
-}
-  
-  .photo {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: top;
-    border: 3px solid white;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  }
-
-  main {
-    max-width: 960px;
-    margin: 2rem auto;
-    padding: 0 1rem;
-  }
-
-  section {
-    margin-bottom: 3rem; /* more breathing room */
-  }
-
-  h2 {
-    font-family: 'Merriweather', serif;
-    font-size: 1.4rem;
-    margin-bottom: 0.75rem;
-    border-bottom: 2px solid var(--accent);
-    padding-bottom: 0.3rem;
-  }
-
-  .card {
-  background: rgba(255, 255, 255, 0.92);
-  border-radius: 12px;
-  box-shadow: 0 2px 8px var(--shadow);
-  padding: 1rem 1.25rem;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-  color: #1e293b; /* enforce readable dark text */
-}
-
-
-  .card:hover {
-    transform: translateY(-2px);
-    box-shadow: 0 4px 14px var(--shadow);
-  }
-
-  @media (prefers-color-scheme: dark) {
-    .card {
-      background: rgba(31, 41, 55, 0.92);
-    }
-  }
-
-  .pubs p {
-    margin: 0.5rem 0;
-    line-height: 1.5;
-  }
-
-  a {
-    color: var(--accent);
-    text-decoration: none;
-  }
-
-  a:hover {
-    text-decoration: underline;
-  }
-
-  footer {
-    text-align: center;
-    font-size: 0.9rem;
-    padding: 2rem 1rem;
-    color: var(--text);
-  }
-</style>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 
 <body>
   <header>
     <div>
       <h1>Tore Hofstad</h1>
-      <p>
-        Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>
-      </p>
-      <p>Guest researcher, Centre for Medical Ethics, Institute of Health and Society, University of Oslo</p>
-      <p><a style="color:white;" href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a></p>
-      <p><a style="color:white;" href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
+      <p>Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a></p>
+      <p>Guest researcher, Centre for Medical Ethics, University of Oslo</p>
     </div>
     <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="research.html">Research</a>
+      <a href="other.html">Other Interests</a>
+    </nav>
   </header>
 
   <main>
     <section class="card">
-      <h2>Research interests</h2>
-      <ul>
-        <li>Coercion in mental health care</li>
-        <li>Geographical variation in health services</li>
-        <li>Statistical methods for causal inference</li>
-        <li>Handling of registry data and data visualisation in R</li>
-        <li>Qualitative Comparative Analysis (QCA)</li>
-        <li>Neurodevelopmental disorders</li>
-      </ul>
-    </section>
-
-    <section class="card">
-      <h2>Selected links</h2>
-      <p><a href="https://scholar.google.com/citations?user=mvEAdH0AAAAJ">Google Scholar</a></p>
-      <p><a href="https://www.researchgate.net/profile/Tore-Hofstad">ResearchGate</a></p>
-    </section>
-
-    <section class="card pubs">
-      <h2>Publications</h2>
-      <p>Rugkåsa, J., Nyttingnes, O., Šaltytė Benth, J., Husum, T. L., Kjus, S. H. H., Wormdahl, I., ... &amp; Hatling, T. (2025). Can primary mental health services impact levels of involuntary admissions? A cluster-RCT of the ReCoN intervention. <i>Social Psychiatry and Psychiatric Epidemiology</i>, 1–11.</p>
-      <p>Hofstad, T., Nyttingnes, O., Bjelland, I., &amp; Mykletun, A. (2025). Catchment area characteristics do not account for geographical variation in ADHD diagnoses. <i>European Child &amp; Adolescent Psychiatry</i>, 1–7.</p>
-      <p>Hofstad, T., Nyttingnes, O., Markussen, S., Johnsen, E., Killackey, E., McDaid, D., ... &amp; Mykletun, A. (2023). Long term outcomes and causal modelling of compulsory inpatient and outpatient mental health care using Norwegian registry data: Protocol for a controversies in psychiatry research project. <i>International Journal of Methods in Psychiatric Research</i>, e1980.</p>
-      <p>Nyttingnes, O., Benth, J. Š., Hofstad, T., &amp; Rugkåsa, J. (2023). The relationship between area levels of involuntary psychiatric care and patient outcomes: a longitudinal national register study from Norway. <i>BMC Psychiatry</i>, 23(1), 112.</p>
-      <p>Hofstad, T. (2022). Geographical variation in compulsory hospitalisation in Norway 2014–2018. PhD-avhandling.</p>
-      <p>Hofstad, T., Husum, T. L., Rugkåsa, J., &amp; Hofmann, B. M. (2022). Geographical variation in compulsory hospitalisation–ethical challenges. <i>BMC Health Services Research</i>, 22(1), 1–12.</p>
-      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O., Kjus, S.H.H., and Husum, T.L. (2021), Service Characteristics and Geographical Variation in Compulsory Hospitalisation: An Exploratory Random Effects Within–Between Analysis of Norwegian Municipalities, 2015–2018. <i>Frontiers in Psychiatry</i>. <a href="https://doi.org/10.3389/fpsyt.2021.737698">https://doi.org/10.3389/fpsyt.2021.737698</a></p>
-      <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O. and Husum, T.L. (2021), Measuring the level of compulsory hospitalisation in mental health care: The performance of different measures across areas and over time. <i>International Journal of Methods in Psychiatric Research</i>. e1881. <a href="https://doi.org/10.1002/mpr.1881">https://doi.org/10.1002/mpr.1881</a></p>
-      <p>Hofstad, T., Hampton, J. A., &amp; Hofmann, B. (2020). What Makes Some Diseases More Typical than Others? A Survey on the Impact of Disease Characteristics and Professional Background on Disease Typicality. <i>INQUIRY</i>. <a href="https://doi.org/10.1177/0046958020972813">https://doi.org/10.1177/0046958020972813</a></p>
-      <p>Hofstad, Tore (2019). QCA &amp; the Robustness range of calibration thresholds: how sensitive are solution terms to changing calibrations? <i>COMPASSS Working Paper Series</i> 2019-92.</p>
-    </section>
-
-    <section class="card" style="border-left: 6px solid #b45309;">
-      <h2>Other interests</h2>
-      <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our music is available on <a href="https://open.spotify.com/artist/0JE40X5MtJJGjScrzAqc8n?si=6XH3mfWvRcmR1vaM0RpUGw" target="_blank">Spotify</a>.</p>
+      <h2>About Me</h2>
+      <p>I am a mental health care researcher with a focus on coercion in psychiatry, geographical variation in health services, and causal inference methods. I work primarily with large-scale registry data in R.</p>
+      <p><a href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a> | <a href="https://scholar.google.com/citations?user=mvEAdH0AAAAJ">Google Scholar</a> | <a href="https://www.researchgate.net/profile/Tore-Hofstad">ResearchGate</a> | <a href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
     </section>
   </main>
-  
-  <footer>
-    © <span id="year"></span> Tore Hofstad
-  </footer>
 
+  <footer>© <span id="year"></span> Tore Hofstad</footer>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
