--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main>
     <section class="card">
       <h2>About Me</h2>
-      <p>I am a mental health care researcher with a focus on coercion in psychiatry, geographical variation in health services, and causal inference methods. I work primarily with large-scale registry data in R.</p>
+      <p>I am a mental health care researcher with a focus on mental health care, geographical variation in health services, and causal inference methods. I work primarily with large-scale registry data in R.</p>
       <p><a href="mailto:tore.hofstad@medisin.uio.no">tore.hofstad@medisin.uio.no</a> | <a href="https://scholar.google.com/citations?user=mvEAdH0AAAAJ">Google Scholar</a> | <a href="https://www.researchgate.net/profile/Tore-Hofstad">ResearchGate</a> | <a href="https://www.med.uio.no/helsam/personer/vit/torehof/">UiO profile</a></p>
     </section>
   </main>
