--- a/research.html
+++ b/research.html
@@ -24,10 +24,12 @@
       <ul>
         <li>Coercion in mental health care</li>
         <li>Geographical variation in health services</li>
+        <li>Neurodevelopmental disorders</li>
         <li>Statistical methods for causal inference</li>
         <li>Handling of registry data and data visualisation in R</li>
         <li>Qualitative Comparative Analysis (QCA)</li>
-        <li>Neurodevelopmental disorders</li>
+        <li>Integral Theory</li>
+        
       </ul>
     </section>
 
