--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <header>
     <div>
       <h1>Tore Hofstad</h1>
-      <p>Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a></p>
-      <p>Guest researcher, Centre for Medical Ethics, University of Oslo</p>
+      <p>Researcher at <a style="color:white;" href="https://www.helse-bergen.no/avdelinger/psykisk-helsevern/forskingsavdelinga-divisjon-psykisk-helsevern/populasjonshelse/">Centre for Population Health</a>, Haukeland University Hospital</p>
+      <p>Guest researcher at <a style="color:white;" href="https://www.med.uio.no/helsam/om/organisasjon/avdelinger/sme/">Centre for Medical Ethics</a>, University of Oslo</p>
     </div>
     <img class="photo" src="profilbilde_tore.jpg" alt="Portrait of Tore Hofstad">
     <nav>
