--- a/research.html
+++ b/research.html
@@ -29,22 +29,21 @@
         <li>Handling of registry data and data visualisation in R</li>
         <li>Qualitative Comparative Analysis (QCA)</li>
         <li>Integral Theory</li>
-        
       </ul>
     </section>
 
     <section class="card">
       <h2>Publications</h2>
-      <p>Rugkåsa, J., Nyttingnes, O., Šaltytė Benth, J., Husum, T. L., Kjus, S. H. H., Wormdahl, I., ... &amp; Hatling, T. (2025). Can primary mental health services impact levels of involuntary admissions? A cluster-RCT of the ReCoN intervention. <i>Social Psychiatry and Psychiatric Epidemiology</i>, 1–11.</p>
-      <p>Hofstad, T., Nyttingnes, O., Bjelland, I., &amp; Mykletun, A. (2025). Catchment area characteristics do not account for geographical variation in ADHD diagnoses. <i>European Child &amp; Adolescent Psychiatry</i>, 1–7.</p>
-      <p>Hofstad, T., Nyttingnes, O., Markussen, S., Johnsen, E., Killackey, E., McDaid, D., ... &amp; Mykletun, A. (2023). Long term outcomes and causal modelling of compulsory inpatient and outpatient mental health care using Norwegian registry data: Protocol for a controversies in psychiatry research project. <i>International Journal of Methods in Psychiatric Research</i>, e1980.</p>
-      <p>Nyttingnes, O., Benth, J. Š., Hofstad, T., &amp; Rugkåsa, J. (2023). The relationship between area levels of involuntary psychiatric care and patient outcomes: a longitudinal national register study from Norway. <i>BMC Psychiatry</i>, 23(1), 112.</p>
-      <p>Hofstad, T. (2022). Geographical variation in compulsory hospitalisation in Norway 2014–2018. PhD-avhandling.</p>
-      <p>Hofstad, T., Husum, T. L., Rugkåsa, J., &amp; Hofmann, B. M. (2022). Geographical variation in compulsory hospitalisation–ethical challenges. <i>BMC Health Services Research</i>, 22(1), 1–12.</p>
+      <p>Rugkåsa, J., Nyttingnes, O., Šaltytė Benth, J., Husum, T. L., Kjus, S. H. H., Wormdahl, I., ... &amp; Hatling, T. (2025). Can primary mental health services impact levels of involuntary admissions? A cluster-RCT of the ReCoN intervention. <i>Social Psychiatry and Psychiatric Epidemiology</i>, 1–11. <a href="https://doi.org/10.1007/s00127-025-02914-3">https://doi.org/10.1007/s00127-025-02914-3</a></p>
+      <p>Hofstad, T., Nyttingnes, O., Bjelland, I., &amp; Mykletun, A. (2025). Catchment area characteristics do not account for geographical variation in ADHD diagnoses. <i>European Child &amp; Adolescent Psychiatry</i>, 1–7. <a href="https://doi.org/10.1007/s00787-025-02720-x">https://doi.org/10.1007/s00787-025-02720-x</a></p>
+      <p>Hofstad, T., Nyttingnes, O., Markussen, S., Johnsen, E., Killackey, E., McDaid, D., ... &amp; Mykletun, A. (2023). Long term outcomes and causal modelling of compulsory inpatient and outpatient mental health care using Norwegian registry data: Protocol for a controversies in psychiatry research project. <i>International Journal of Methods in Psychiatric Research</i>, e1980. <a href="https://doi.org/10.1002/mpr.1980">https://doi.org/10.1002/mpr.1980</a></p>
+      <p>Nyttingnes, O., Benth, J. Š., Hofstad, T., &amp; Rugkåsa, J. (2023). The relationship between area levels of involuntary psychiatric care and patient outcomes: a longitudinal national register study from Norway. <i>BMC Psychiatry</i>, 23(1), 112. <a href="https://doi.org/10.1186/s12888-023-04584-4">https://doi.org/10.1186/s12888-023-04584-4</a></p>
+      <p>Hofstad, T. (2022). Geographical variation in compulsory hospitalisation in Norway 2014–2018. PhD-avhandling. <a href="https://www.duo.uio.no/handle/10852/98205">Repository link</a></p>
+      <p>Hofstad, T., Husum, T. L., Rugkåsa, J., &amp; Hofmann, B. M. (2022). Geographical variation in compulsory hospitalisation–ethical challenges. <i>BMC Health Services Research</i>, 22(1), 1–12. <a href="https://doi.org/10.1186/s12913-022-08798-2">https://doi.org/10.1186/s12913-022-08798-2</a></p>
       <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O., Kjus, S.H.H., and Husum, T.L. (2021). Service Characteristics and Geographical Variation in Compulsory Hospitalisation: An Exploratory Random Effects Within–Between Analysis of Norwegian Municipalities, 2015–2018. <i>Frontiers in Psychiatry</i>. <a href="https://doi.org/10.3389/fpsyt.2021.737698">https://doi.org/10.3389/fpsyt.2021.737698</a></p>
       <p>Hofstad, T., Rugkåsa, J., Ose, S.O., Nyttingnes, O. and Husum, T.L. (2021). Measuring the level of compulsory hospitalisation in mental health care: The performance of different measures across areas and over time. <i>International Journal of Methods in Psychiatric Research</i>. e1881. <a href="https://doi.org/10.1002/mpr.1881">https://doi.org/10.1002/mpr.1881</a></p>
       <p>Hofstad, T., Hampton, J. A., &amp; Hofmann, B. (2020). What Makes Some Diseases More Typical than Others? A Survey on the Impact of Disease Characteristics and Professional Background on Disease Typicality. <i>INQUIRY: The Journal of Health Care Organization, Provision, and Financing</i>. <a href="https://doi.org/10.1177/0046958020972813">https://doi.org/10.1177/0046958020972813</a></p>
-      <p>Hofstad, T. (2019). QCA &amp; the Robustness range of calibration thresholds: how sensitive are solution terms to changing calibrations? <i>COMPASSS Working Paper Series</i> 2019-92.</p>
+      <p>Hofstad, T. (2019). QCA &amp; the Robustness range of calibration thresholds: how sensitive are solution terms to changing calibrations? <i>COMPASSS Working Paper Series</i> 2019-92. <a href="https://www.compasss.org/wpseries/Hofstad2019.pdf">Working paper (no DOI)</a></p>
     </section>
   </main>
 
