--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <link rel="stylesheet" href="style.css">
 
 <body>
+
+  <script data-goatcounter="https://torehof.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
   <header>
     <div>
       <h1>Tore Hofstad</h1>
