--- a/other.html
+++ b/other.html
@@ -21,7 +21,7 @@
   <main>
     <section class="card">
       <h2>Music</h2>
-      <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our music is available on <a href="https://open.spotify.com/artist/0JE40X5MtJJGjScrzAqc8n?si=6XH3mfWvRcmR1vaM0RpUGw" target="_blank">Spotify</a>.</p>
+      <p>Beyond research, I am an active musician in <a href="http://www.thepingpage.com" target="_blank">Ping</a>. Our new album Songs from the Nebula can be heard <a href="https://orcd.co/ping-nebula" target="_blank">here</a>.</p>
     </section>
   </main>
 
